tdf#122589 rtfexport: no duplicate section at document start

If the document starts with a real section, then RTF export should
not write out \sect before the first paragraph, because there already
is an implicit section. Otherwise on import it is treated as an
empty paragraph.

The reason this problem doesn't multiply on each round-trip
is that the import process puts a PageBreak on the first
paragraph, and so it follows a different code path.
The ODT file does not contain a PageBreak on the first paragraph.

Change-Id: I8f2d48c932587aaf162e8f7352adf12ec15645f0
Reviewed-on: https://gerrit.libreoffice.org/66017
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
(cherry picked from commit 5b19be032c51e0f7489b29c2c98e484587ed0865)
Reviewed-on: https://gerrit.libreoffice.org/66195
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>